Added prepare to test native